--- a/r/ro/rol/roleplayer.me.html
+++ b/r/ro/rol/roleplayer.me.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the roleplayer.me privacy policy that was archived on 2013-08-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130815182648id_/http%3A//www.roleplayer.me/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the roleplayer.me privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215052637id_/http%3A//www.roleplayer.me/privacy_policy.php) for the most accurate reproduction.-->
 
 <html><head><meta name="robots" content="noindex">
 <meta property="og:image" content="http://i.imgur.com/7SbTrYq.jpg"><link rel="shortcut icon" href="site_rp/favicon.ico">
 
-<script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script>
 if(top != self) {
  top.onbeforeunload = function() {};
  top.location.replace(self.location.href);
@@ -25,8 +25,21 @@ html .jquerycssmenu{height: 1%;} /*Holly Hack for IE7 and below*/
 <![endif]--> 
 
 
-<!-- analytics -->
-<!-- analytics OFF -->
+<!-- ad_analytics -->
+
+<!-- analytics RP -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-45390883-1', 'roleplayer.me');
+  ga('send', 'pageview');
+
+</script>
+
+
 
 
 
@@ -77,23 +90,19 @@ td.columnsWidening img, td.columnsWidening object { width: expression(this.width
 
 <div align="center">
 <br>
-<!-- ad_728x90_a1_a -->
+<!-- ad_728x90_a1_atf -->
 <div class="ad-top">
 
-
-
-
-
-<iframe id="frameSideContent" width="728px" height="90px" src="ad_728x90_atf.php" frameborder="0" framespacing="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-<br>
-
+<!-- RP -->
+<div align="center">
+<iframe id="frameSideContent" width="728px" height="90px" src="ad_728x90_atf_rp.php" frameborder="0" framespacing="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 </div>
 
 
 
 </div>
   
-</div></td></tr><tr><td bgcolor="#3372B6"><div id="googlebar" class="clearfix"><div id="logo" class="profile"><h1 class="smlogo"><a href="http://www.roleplayer.me/index.php" style="background-image: url(/site_rp/images/smlogo.png);"><strong>RolePlayer.me</strong></a></h1></div> 
+</div></div></td></tr><tr><td bgcolor="#3372B6"><div id="googlebar" class="clearfix"><div id="logo" class="profile"><h1 class="smlogo"><a href="http://www.roleplayer.me/index.php" style="background-image: url(/site_rp/images/smlogo.png);"><strong>RolePlayer.me</strong></a></h1></div> 
 
 <form name="SearchFormTop" method="get" action="search_profiles.php"><div id="searchheader" class="profile"> <input id="search_t" type="hidden" name="type" value="1">  <div class="srchfield"><div><div><input type="text" name="searchrequest" id="search_q" class="srchTextfld" size="30" maxlength="200" value="" align="MIDDLE"> <div id="srchMenu"><span class="loc2"><a id="searchTypeValue" onclick="rpnav.openSearchTypes();" onmouseout="rpnav.hideSearchTypes();">People ☆</a></span><div id="srchMenuList" onmouseover="rpnav.srchMenuList(true);" onmouseout="rpnav.srchMenuList(false);"><ul><li></li></ul></div></div></div></div></div> 
 <div class="srchButton"><div><input id="submit" type="submit" value="Search"></div></div> 
@@ -130,7 +139,7 @@ td.columnsWidening img, td.columnsWidening object { width: expression(this.width
 <li class="last"><a target="_blank" href="http://www.knowinggod.net/god-has-changed-their-lives/mix-of-amazing-stories/">Knowing God</a></li></ul>
 
 <ul id="subNav5" onmouseover="rpnav.subToggle('5',true);" onmouseout="rpnav.subToggle('5',false);">
-<li><a href="/online_people.php">Online</a></li>
+<li><a href="/online_people.php?n=0">Online</a></li>
 <li><a href="/boys.php">Only Boys</a></li>
 <li><a href="/girls.php">Only Girls</a></li>
 <li class="last"><a href="/bands.php">Only Bands</a></li></ul>
@@ -145,6 +154,7 @@ td.columnsWidening img, td.columnsWidening object { width: expression(this.width
 <tbody><tr>
 <td>
 <div align="center">
+
 
 
 <table width="100%">
@@ -365,8 +375,31 @@ privacy@ClearVista.com<p></p><table width="100%" border="0" cellspacing="0" cell
 
 <a href="mailto:support@roleplayer.me" class="top_nav_black">support@roleplayer.me</a>
  
-</div><br><font face="Arial, Helvetica, sans-serif" size="0">© 2013 RolePlayer.me. All Rights Reserved.</font>
+</div><br><font face="Arial, Helvetica, sans-serif" size="0">© 2014 RolePlayer.me. All Rights Reserved.</font>
 <br>
+ 
+<br><center>
+
+<a href="http://www.toprpsites.com/"><img src="http://www.toprpsites.com/button.php?u=RolePlayer&amp;buttontype=static" alt="Top RP Sites"></a>
+
+
+<!-- BEGIN TOP SITE LIST PLANET VOTING CODE --><a href="http://www.top-site-list.com/roleplaying/vote/318452" target="_top"><img src="http://www.top-site-list.com/user-images/list-vote-images/4019-51f26eee6055e.gif" alt="Vote for RolePlayer.me at Top Site List Planet" style="border:0;"></a><!-- END TOP SITE LIST PLANET VOTING CODE -->
+
+
+<!-- BEGIN TOP SITE LIST PLANET VOTING CODE --><a href="http://www.top-site-list.com/jaycatschoice/vote/371549" target="_top"><img src="http://www.top-site-list.com/user-images/list-vote-images/4019-51f26eee669bf.gif" alt="Vote for RolePlayer.me at Top Site List Planet" style="border:0;"></a><!-- END TOP SITE LIST PLANET VOTING CODE -->
+
+<!-- BEGIN TOP SITE LIST PLANET VOTING CODE --><a href="http://www.top-site-list.com/mu/vote/67180" target="_top"><img src="http://www.top-site-list.com/user-images/list-vote-images/316-51f26d131507a.jpg" alt="Vote for RolePlayer.me at Top Site List Planet" style="border:0;"></a><!-- END TOP SITE LIST PLANET VOTING CODE -->
+
+
+</center><br>
+
+ 
+ 
+ 
+ 
+ 
+ 
+
 
 <!--INFOLINKS_OFF-->
 </div></td></tr></tbody></table> 
