--- a/p/pa/par/parcelbound.com.html
+++ b/p/pa/par/parcelbound.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the parcelbound.com privacy policy that was archived on 2013-10-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131009230536id_/http%3A//www.parcelbound.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the parcelbound.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215085338id_/http%3A//www.parcelbound.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 		<link rel="shortcut icon" href="/images/pb.ico">
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="/ui-themes/smoothness/jquery-ui-front.css">
 	<link rel="stylesheet" type="text/css" href="/css/select2.css">
 
-	<script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=305879022847480"></script><script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="/js/jquery/jquery1.7.min.js"></script>
+	<script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0020/9202.js?438986" async="" type="text/javascript"></script><script async="" src="//static.getkudos.me/widget.js"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=305879022847480"></script><script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="/js/jquery/jquery1.7.min.js"></script>
 		
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -81,7 +81,7 @@
 						<a href="#" id="login_link">Customer Login</a>
 						<div class="panel">
 							<div class="login_pan">
-								<form action="/users/login" class="hidden" id="UserLoginForm" method="post" accept-charset="utf-8"><div style="display:none;"><input type="hidden" name="_method" value="POST"><input type="hidden" name="data[_Token][key]" value="38ab71d25744f907a9f21035b4f73d294d4f5ab3" id="Token1386403696"></div><div class="input text required"><label for="loginEmail">Email</label><input name="data[User][email]" type="text" id="loginEmail" maxlength="100"></div><div class="input password required"><label for="loginPass">Password</label><input type="password" name="data[User][password]" id="loginPass"></div>								<div id="btn">
+								<form action="/users/login" class="hidden" id="UserLoginForm" method="post" accept-charset="utf-8"><div style="display:none;"><input type="hidden" name="_method" value="POST"><input type="hidden" name="data[_Token][key]" value="0ca878319cba49d330c0f7e8b777fdc53d13e49d" id="Token679723389"></div><div class="input text required"><label for="loginEmail">Email</label><input name="data[User][email]" type="text" id="loginEmail" maxlength="100"></div><div class="input password required"><label for="loginPass">Password</label><input type="password" name="data[User][password]" id="loginPass"></div>								<div id="btn">
 									<input type="submit" value="Log in!">
 									<div id="Remember">
 										<input type="hidden" name="data[User][remember_me]" id="UserRememberMe_" value="0"><input type="checkbox" name="data[User][remember_me]" value="1" id="UserRememberMe"><label for="UserRememberMe">Stay signed in</label>									</div>
@@ -91,9 +91,9 @@
 										<a id="forgot_password" href="#">Forgot your Password?</a>
 									</p>
 								</div>
-								<div style="display:none;"><input type="hidden" name="data[_Token][fields]" value="f477e5c846b3f8233c49f8923fee5b14a9f50933%3A" id="TokenFields1943271619"></div></form>							</div>
+								<div style="display:none;"><input type="hidden" name="data[_Token][fields]" value="f477e5c846b3f8233c49f8923fee5b14a9f50933%3A" id="TokenFields1435345119"></div></form>							</div>
 							<div class="forget_pan hidden">
-								<form action="/users/forgot" id="ForgotPasswordForm" method="post" accept-charset="utf-8"><div style="display:none;"><input type="hidden" name="_method" value="POST"><input type="hidden" name="data[_Token][key]" value="38ab71d25744f907a9f21035b4f73d294d4f5ab3" id="Token1948861631"></div><div class="input text required"><label for="forgetEmail">Email</label><input name="data[User][email]" type="text" id="forgetEmail" maxlength="100"></div>								<div id="btn">
+								<form action="/users/forgot" id="ForgotPasswordForm" method="post" accept-charset="utf-8"><div style="display:none;"><input type="hidden" name="_method" value="POST"><input type="hidden" name="data[_Token][key]" value="0ca878319cba49d330c0f7e8b777fdc53d13e49d" id="Token1673004168"></div><div class="input text required"><label for="forgetEmail">Email</label><input name="data[User][email]" type="text" id="forgetEmail" maxlength="100"></div>								<div id="btn">
 									<input type="submit" value="Submit!">
 								</div>
 								<div id="Forgot">
@@ -101,7 +101,7 @@
 										<a id="forgot_login" href="#">Try login again?</a>
 									</p>
 								</div>
-								<div style="display:none;"><input type="hidden" name="data[_Token][fields]" value="c378fdcc6ec13b5fca68e9cb11dde302d5c8d7b6%3A" id="TokenFields1618693112"></div></form>							</div>
+								<div style="display:none;"><input type="hidden" name="data[_Token][fields]" value="c378fdcc6ec13b5fca68e9cb11dde302d5c8d7b6%3A" id="TokenFields1438733256"></div></form>							</div>
 						</div>
 					</div>
 					
@@ -139,7 +139,7 @@
 					<li>
 						<a href="/individual/how-it-works" title="How It Works">HOW IT WORKS</a>					</li>
 					<li>
-					<a href="/individual/compare-membership-plans" title="COMPARE PLANS">COMPARE PARCEL PLANS</a>					</li>
+					<a href="/individual/compare-membership-plans" title="MEMBERSHIP PRICING">MEMBERSHIP PRICING</a>					</li>
 					<li>
 					<a href="/individual/personal-shopper" title="PERSONAL SHOPPER">PERSONAL SHOPPER</a>					</li>
 					<li>
@@ -149,9 +149,10 @@
 				</ul>
 			</li>
 			<li class="mymarg" id="menuIE73">
-					<a href="/partners/affiliates" title="AFFILIATES">Partner with us</a>				<ul>
+									  <a href="http://www.neverblue.com/signup/affiliate" target="blank">Partner With Us</a>
+        <ul>
 					<li>
-					<a href="/partners/affiliates" title="AFFILIATES">AFFILIATES</a>
+					          <a href="http://www.neverblue.com/signup/affiliate" target="blank">Affiliate Program</a>
 					</li>
 					<li>
 					<a href="/partners/merchants" title="USA MERCHANTS">USA MERCHANTS</a>
@@ -175,7 +176,7 @@
 			<li class="mymarg" id="menuIE75">
 					<a href="/shop-now/price-comparison" title="PRICE COMPARISON">Shop Now</a>				<ul>
 					<li>
-					<a href="/shop-now/price-comparison" title="PRICE COMPARISON">PRICE COMPARISON</a>					</li>
+					<a href="/shop-now/price-comparison" title="COMPARISON SHOPPING">COMPARISON SHOPPING</a>					</li>
 					<li>
 						<a href="/shop-now/amazon-deals" title="USA AMAZON DEALS">USA AMAZON DEALS</a>
 					</li>
@@ -263,7 +264,10 @@ Note: If at any time you would like to unsubscribe from receiving future emails,
 				<li>
 						<a href="/about-us/news-and-media" title="Media News">News &amp; Media</a>				</li>
 				<li>
-					<a href="/partners/affiliates" title="AFFILIATES">Affiliate Program</a>				</li>
+					<a href="http://www.neverblue.com/signup/affiliate" target="blank">Affiliate Program</a>
+									</li>
+        <li>
+					<a href="/individual/compare-membership-plans" title="Membership Pricing">Membership Pricing</a>				</li>
 				<li>
 					<a href="/contact-us" title="Contact Us">Contact Us</a>				</li>
 				<li>
@@ -281,7 +285,7 @@ Note: If at any time you would like to unsubscribe from receiving future emails,
 				<li>
 						<a href="/ship-info/currency-converter" title="Currency Converter">Currency Converter</a>				</li>
 				<li>
-					<a href="/shop-now/price-comparison" title="PRICE COMPARISON">Price Comparison</a>				</li>
+					<a href="/shop-now/price-comparison" title="Comparison Shopping">Comparison Shopping</a>				</li>
 				<li>
 					<a href="/shop-now/top-usa-stores" title="TOP USA STORES">Top USA Stores</a>				</li>
 				<li>
@@ -293,8 +297,11 @@ Note: If at any time you would like to unsubscribe from receiving future emails,
 		<a href="/home/privacyPolicy/url:#"><img src="/img/visa.png" alt="We Accept Visa"></a><a href="/home/privacyPolicy/url:#"><img src="/img/amex.png" alt="We Accept American Express"></a><a href="/home/privacyPolicy/url:#"><img src="/img/master.png" alt="We Accept MasterCard"></a>		<br>
 		<a href="/home/privacyPolicy/url:#"><img src="/img/discover.png" alt="We Accept Discover"></a><a href="/home/privacyPolicy/url:#"><img src="/img/diners.png" alt="We Accept Diners Club International"></a><a href="/home/privacyPolicy/url:#"><img src="/img/jcb.png" alt="We Accept JCB"></a>		<br>
 		<a href="/home/privacyPolicy/url:#"><img src="/img/union.png" alt="We Accept UnionPay" class="f-union"></a><a href="/home/privacyPolicy/url:#"><img src="/img/maxmind.png" alt="Maxmind Credit Card Protection"></a>		<br>
-		<a href="/home/privacyPolicy/url:#"><img src="/img/trust.png" class="f-trust" alt=""></a>	</div>
+		<a href="/home/privacyPolicy/url:#"><img src="/img/trust.png" class="f-trust" alt=""></a>	</div>	
 </div>
+
+<!-- (c) 2005, 2013. Authorize.Net is a registered trademark of CyberSource Corporation --> 
+  <!-- br--><!-- br--><center><div class="AuthorizeNetSeal"> <script type="text/javascript" language="javascript">var ANS_customer_id="9c81d4e7-d03d-4cd6-9ff8-8bcdbe919d95";</script> <script type="text/javascript" language="javascript" src="//verify.authorize.net/anetseal/seal.js"></script> <a href="https://www.authorize.net/" id="AuthorizeNetText" target="_blank">E-Commerce Solutions</a> </div></center>
 <!-- Quantcast Tag -->
 <script type="text/javascript">
 var _qevents = _qevents || [];
@@ -358,6 +365,53 @@ window.onload = function(){
    if(oldonload){oldonload()}};
 }());
 </script>
+
+<!-- Start of GetKudos Script -->
+<script>
+(function(w,t,gk,d,s,fs){if(w[gk])return;d=w.document;w[gk]=function(){
+(w[gk]._=w[gk]._||[]).push(arguments)};s=d.createElement(t);s.async=!0;
+s.src='//static.getkudos.me/widget.js';fs=d.getElementsByTagName(t)[0];
+fs.parentNode.insertBefore(s,fs)})(window,'script','getkudos');
+
+getkudos('create', 'parcelbound');
+</script>
+<!-- End of GetKudos Script -->
+
+<script src="https://my.vicloning.net/interface/?k=0x745d31a2&amp;lang=en"></script>
+
+<script type="text/javascript">
+setTimeout(function(){var a=document.createElement("script");
+var b=document.getElementsByTagName("script")[0];
+a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0020/9202.js?"+Math.floor(new Date().getTime()/3600000);
+a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+</script>
+
+<script type="text/javascript" async="" src="https://ssl.widgets.webengage.com/js/widget/webengage-min-v-4.0.js"></script><script id="_webengage_script_tag" type="text/javascript">
+  var _weq = _weq || {};
+  _weq['webengage.licenseCode'] = '~10a5cb978';
+  _weq['webengage.widgetVersion'] = "4.0";
+  
+  (function(d){
+    var _we = d.createElement('script');
+    _we.type = 'text/javascript';
+    _we.async = true;
+    _we.src = (d.location.protocol == 'https:' ? "https://ssl.widgets.webengage.com" : "http://cdn.widgets.webengage.com") + "/js/widget/webengage-min-v-4.0.js";
+    var _sNode = d.getElementById('_webengage_script_tag');
+    _sNode.parentNode.insertBefore(_we, _sNode);
+  })(document);
+</script>
+
+<!-- PLACE THIS CODE AT THE END OF THE BODY TAG -->
+<script type="text/javascript" src="https://fluidsurveys.com/media/static/survey-prompts.js"></script>
+<script type="text/javascript">
+	var FSPROMPT = new SurveyPrompt({
+		id: 6303,
+		href: "https://fluidsurveys.com/surveys/parcelbound/why-are-you-here/prompt/6303/",
+		"$": jQuery,
+		cookie: 'FSPrompt-6303'
+	}).setup();
+	jQuery.noConflict(true);
+</script>
 <div id="Footertxt">
 	<span>**International currencies are for information only and are updated daily; all purchases will be charged in USD currency!**
 		<br>
@@ -368,10 +422,10 @@ window.onload = function(){
 </div><div class="hidden">
 	<div id="pop_up">
 		<!-- Do not modify the NAME value of any of the INPUT fields the FORM action, or any of the hidden fields (eg. input type=hidden). These are all required for this form to function correctly. --> <!-- 	.myForm td, input, select, textarea, checkbox { 		font-family: georgia, tahoma; 		font-size: 14px; 	}  	.myForm { 		background-color: #FBFAE7; 		border: 1px solid #EFECBA; 		padding: 10px; 	}  	.required { 		color: red; 	} --> <form id="frmSS1" action="http://www.parcelbound.com/iem/form.php?form=1" method="post">
-<table class="myForm" style="float: left;" border="0" cellpadding="2" width="546" height="284">
+<table class="myForm" style="float: left;" border="0" cellpadding="2" width="568" height="652">
 <tbody>
 <tr>
-<td style="text-align: left;" colspan="2">
+<td style="text-align: center;" colspan="2">
 <table style="height: 91px; width: 545px;" border="0">
 <tbody>
 <tr>
@@ -382,18 +436,19 @@ window.onload = function(){
 </tbody>
 </table>
 <hr>
-<p style="text-align: left;"><br><span style="font-size: medium; font-family: arial,helvetica,sans-serif;"><strong><span style="font-size: large;"><span style="font-size: x-large;">Explore these great new customer features added to the Parcelbound website!</span><br></span></strong></span></p>
-<p>&nbsp;</p>
+<p style="text-align: center;"><br><span style="font-size: medium; font-family: verdana,geneva;"><span style="font-size: large;"><span style="font-size: x-large;"><strong>Stay Informed- Enter Email Below! </strong><br></span></span></span></p>
+<span style="font-size: medium; font-family: verdana,geneva;"> <strong><span style="font-size: large;"><br></span></strong> </span>
 <ul>
-<li><span style="font-size: medium; font-family: arial,helvetica,sans-serif;">NO processing or consolidation fees</span></li>
-<li><span style="font-size: medium; font-family: arial,helvetica,sans-serif;">Multiple shipping carriers options (USPS, DHL, FedEx)</span></li>
-<li><span style="font-size: medium; font-family: arial,helvetica,sans-serif;">More control over your shipments</span></li>
-<li><span style="font-size: medium; font-family: arial,helvetica,sans-serif;">Edit item information right from your account</span></li>
-<li><span style="font-size: medium; font-family: arial,helvetica,sans-serif;">Join our in-house affiliate program</span></li>
-<li><span style="font-size: medium; font-family: arial,helvetica,sans-serif;">Generate shipping labels online and schedule a pickup to your house. <br></span></li>
-<li><span style="font-size: medium; font-family: arial,helvetica,sans-serif;">Etc.<br></span></li>
+<li style="text-align: left;"><span style="font-family: verdana,geneva;"><strong><span style="font-size: medium;">NO processing or consolidation fees</span></strong></span></li>
+<li style="text-align: left;"><span style="font-size: medium; font-family: verdana,geneva;"><strong>Multiple shipping carriers </strong>options (USPS, DHL, FedEx)</span></li>
+<li style="text-align: left;"><span style="font-size: medium; font-family: verdana,geneva;">More control over your shipments</span></li>
+<li style="text-align: left;"><span style="font-family: verdana,geneva;"><strong><span style="font-size: medium;">Edit item information right from your account</span></strong></span></li>
+<li style="text-align: left;"><span style="font-size: medium; font-family: verdana,geneva;">Join our <strong>in-house affiliate program</strong> to earn <strong>$$$</strong><br></span></li>
+<li style="text-align: left;"><span style="font-size: medium; font-family: verdana,geneva;"><strong>Generate shipping labels online</strong> and <strong>schedule pickups</strong> to your house <br></span></li>
+<li style="text-align: left;"><span style="font-size: medium; font-family: verdana,geneva;">And <strong>NEW</strong> features coming soon</span></li>
 </ul>
-<span style="font-size: medium; font-family: arial,helvetica,sans-serif;"><span style="font-size: small;"> <br></span></span></td>
+<p>&nbsp;</p>
+</td>
 </tr>
 <tr>
 <td colspan="2"><span style="font-family: arial,helvetica,sans-serif; font-size: small;"><img style="float: left;" title="Parcelbound Logo" src="https://www.parcelbound.com/uploads/logo.png" alt="Parcelbound Logo" width="245" height="69"></span></td>
@@ -411,7 +466,7 @@ window.onload = function(){
 </tr>
 <input name="format" type="hidden" value="h">
 <tr>
-<td colspan="2" align="left"><br><span style="font-family: arial,helvetica,sans-serif; font-size: small;"><input type="submit" value="Subscribe"></span></td>
+<td colspan="2" align="left"><br><span style="font-family: arial,helvetica,sans-serif; font-size: small;"><input type="submit" value="We Can Help!"></span></td>
 </tr>
 </tbody>
 </table>
@@ -431,18 +486,5 @@ var Croogo = {"basePath":"\/","params":{"controller":"home","action":"privacyPol
 		    window.setTimeout(function(){jQuery("#rightlogin").css("opacity","100");},3000)
 		  })();
 		</script>
-		
-<!-- PLACE THIS CODE AT THE END OF THE BODY TAG -->
-<script type="text/javascript" src="https://fluidsurveys.com/media/static/survey-prompts.js"></script>
-<script type="text/javascript">
-	var FSPROMPT = new SurveyPrompt({
-		id: 4238,
-		href: "http://fluidsurveys.com/surveys/parcelbound/help-us-better-serve-you/prompt/4238/",
-		"$": jQuery,
-		cookie: 'FSPrompt-4238'
-	}).setup();
-	jQuery.noConflict(true);
-</script>
-
 	
 </body></html>
