--- a/b/bg/bgr/bgroom.com.html
+++ b/b/bg/bgr/bgroom.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bgroom.com privacy policy that was archived on 2013-11-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131121105354id_/http%3A//www.bgroom.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bgroom.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215093405id_/http%3A//www.bgroom.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -10,7 +10,7 @@
 		<link href="resources/langbar.css" rel="stylesheet" type="text/css">
                 <link href="resources/bgstyle.css" rel="stylesheet" type="text/css">
 
-	        <script type="text/javascript" async="" src="/_Incapsula_Resource?SWJIYLWA=2977d8d74f63d7f8fedbea018b7a1d05&amp;ns=1"></script><script src="resources/js.js" type="text/javascript"> </script>
+	        <script type="text/javascript" async="" src="/_Incapsula_Resource?SWJIYLWA=2977d8d74f63d7f8fedbea018b7a1d05&amp;ns=2"></script><script src="resources/js.js" type="text/javascript"> </script>
         <script src="resources/marquee.js" type="text/javascript"></script>
 	<script type="text/javascript">
         var myNumB=Math.floor(Math.random()*2); //number of big ads
@@ -63,7 +63,7 @@ html{overflow-x:hidden;}
 <!--###start download button###-->
 <!--a  id='dlink_promo' href="http://download-client.bgroom.com/download.php""><img src="resources/download_inner_en.gif" border="0" id="download-float" /></a-->
 
-<a id="dlink" href="http://download-client.bgroom.com/download.php" class="download-invisible"><!--keep this space filled to keep out unwanted guests ;)=--></a>
+<a id="dlink" href="http://download-client.bgroom.com/download.php?App=bg&amp;prod_id=1&amp;aname=house_aff&amp;zone_id=none" class="download-invisible"><!--keep this space filled to keep out unwanted guests ;)=--></a>
 
 <a><img src="resources/download_inner_en.gif" border="0" id="download-float2"></a>
 <!--###start download button###-->
@@ -171,7 +171,7 @@ document.write('<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" cod
 
 
  if (loc=="Help" || loc=="FAQ" || loc=="Support" || loc=="timers" || loc=="glossary" || loc=="client_features" || loc=="tips" || loc=="payment_options" || loc=="payment_card" || loc=="payment_neteller" || loc=="payment_paypal" || loc=="payment_moneybookers" || loc=="payment_cashu" || loc=="payment_webmoney" || loc=="payment_westernunion" || loc=="payment_wirecard") {document.write("<div id='submenu_wrapper'><div id='submenu'><a href='Help.html'>Game Help</a> | <a href='FAQ.html'>FAQ</a> | <a href='Support.html'>Support</a></div></div>")}
-</script><object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0" width="523" height="29" id="menu" align="middle"><param name="allowScriptAccess" value="sameDomain"><param name="movie" value="resources/menu.swf?m_langID=1&amp;m_btnCmd=privacy_policy&amp;pageUrl=https://web.archive.org/web/20131121105354id_/http%3A//www.bgroom.com/privacy_policy.html"><param name="quality" value="high"><param name="wmode" value="transparent"><param name="bgcolor" value="#ffffff"><embed src="resources/menu.swf?m_langID=1&amp;m_btnCmd=privacy_policy&amp;pageUrl=https://web.archive.org/web/20131121105354id_/http%3A//www.bgroom.com/privacy_policy.html" quality="high" wmode="transparent" bgcolor="#ffffff" width="523" height="29" name="menu" align="middle" allowscriptaccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer"></object>
+</script><object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0" width="523" height="29" id="menu" align="middle"><param name="allowScriptAccess" value="sameDomain"><param name="movie" value="resources/menu.swf?m_langID=1&amp;m_btnCmd=privacy_policy&amp;pageUrl=https://web.archive.org/web/20140215093405id_/http%3A//www.bgroom.com/privacy_policy.html"><param name="quality" value="high"><param name="wmode" value="transparent"><param name="bgcolor" value="#ffffff"><embed src="resources/menu.swf?m_langID=1&amp;m_btnCmd=privacy_policy&amp;pageUrl=https://web.archive.org/web/20140215093405id_/http%3A//www.bgroom.com/privacy_policy.html" quality="high" wmode="transparent" bgcolor="#ffffff" width="523" height="29" name="menu" align="middle" allowscriptaccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer"></object>
 	<br><br>
 		</div>
 	
@@ -303,7 +303,7 @@ a-->&nbsp;&nbsp;&nbsp;&nbsp;
 //<![CDATA[
 (function() {
 var _analytics_scr = document.createElement('script');
-_analytics_scr.type = 'text/javascript'; _analytics_scr.async = true; _analytics_scr.src = '/_Incapsula_Resource?SWJIYLWA=2977d8d74f63d7f8fedbea018b7a1d05&ns=1';
+_analytics_scr.type = 'text/javascript'; _analytics_scr.async = true; _analytics_scr.src = '/_Incapsula_Resource?SWJIYLWA=2977d8d74f63d7f8fedbea018b7a1d05&ns=2';
 var _analytics_elem = document.getElementsByTagName('script')[0]; _analytics_elem.parentNode.insertBefore(_analytics_scr, _analytics_elem);
 })();
 // ]]>
